syntax = "proto3";

option csharp_namespace = "PersonInformationGrpcService";

package Person;

service PersonServices {
  rpc CreatePerson (CreatePersonRequest) returns (CreatePersonResponse);
  rpc GetPersonById (GetPersonByIdRequest) returns (GetPersonByIdResponse);
  rpc UpdatePerson (UpdatePersonRequest) returns (UpdatePersonResponse);
  rpc DeletePerson (DeletePersonRequest) returns (DeletePersonResponse);
}

message CreatePersonRequest {
  string first_name = 1;
  string last_name = 2;
  string national_code = 3;
  string date_of_birth = 4;
}

message CreatePersonResponse {
  int32 id = 1;
}

message GetPersonByIdRequest {
  int32 id = 1;
}

message GetPersonByIdResponse {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string national_code = 4;
  string date_of_birth = 5;
}

message UpdatePersonRequest {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string national_code = 4;
  string date_of_birth = 5;
}

message UpdatePersonResponse {
  bool status = 1;
}

message DeletePersonRequest {
  int32 id = 1;
}

message DeletePersonResponse {
  bool status = 1;
}